Implement initial header with nav structure

--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <nav>
-      <a href="#">LOGO</a>
-      <a href="#">Food delivery</a>
-      <a href="#">Food delivery</a>
-      <a href="#">Food delivery</a>
-      <a href="#">Food delivery</a>
-    </nav>
-
+    <header class="header">
+      <img class="logo" alt="Omnifood logo" src="/img/omnifood-logo.png"></img>
+      <nav class="main-nav">
+        <a href="#">Food delivery</a>
+        <a href="#">Food delivery</a>
+        <a href="#">Food delivery</a>
+        <a href="#">Food delivery</a>
+      </nav>
+    </header>
+    
+    <main>
     <section class="section-hero">
       <div class="hero">
         <div class="hero-text-box">
@@ -85,5 +88,7 @@
         </div>
       </div>
     </section>
+  </main>
+
   </body>
 </html>
