--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
     <header class="header">
       <img class="logo" alt="Omnifood logo" src="/img/omnifood-logo.png"></img>
       <nav class="main-nav">
-        <a href="#">Food delivery</a>
-        <a href="#">Food delivery</a>
-        <a href="#">Food delivery</a>
-        <a href="#">Food delivery</a>
+        <ul class="main-nav-list">
+          <li><a href="#"class="main-nav-link">Section</a></li>
+          <li><a href="#"class="main-nav-link">Section</a></li>
+          <li><a href="#"class="main-nav-link">Section</a></li>
+          <li><a href="#"class="main-nav-link">Section</a></li>
+          <li><a href="#"class="main-nav-link nav-cta">Section</a></li>
+        </ul>
       </nav>
     </header>
     
