Implement a reusable grid

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <main>
     <section class="section-hero">
-      <div class="hero">
+      <div class="hero container">
         <div class="hero-text-box">
           <h1 class="heading-primary">
             A healthy meal delivered to your door, every single day
@@ -90,6 +90,15 @@
           />
         </div>
       </div>
+    </section>
+
+    <section class="section-how">
+      <div class="container grid grid--2--cols">
+      <div>Test 1</div>
+      <div>Test 1</div>
+      <div>Test 1</div>
+      <div>Test 1</div>
+    </div>
     </section>
   </main>
 
