Update grid margins and add new feature section

--- a/index.html
+++ b/index.html
@@ -428,6 +428,10 @@
         </div>
       </div>
 
+      <div class="container grid grid--4-cols">
+        <div class="feature">feature</div> 
+        <div class="feature">feature</div> <div class="feature">feature</div> <div class="feature">feature</div> 
+      </div>
     </section>
 
   </main>
