--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="">
         <img class="logo" alt="Omnifood logo" src="/img/omnifood-logo.png"></img>
       </a>
@@ -31,7 +31,15 @@
           <li><a href="#"class="main-nav-link">Pricing</a></li>
           <li><a href="#"class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
-      </nav>           
+      </nav>  
+      
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
+
+
+
     </header>
     
     <main>
