--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="">
         <img class="logo" alt="Omnifood logo" src="/img/omnifood-logo.png"></img>
       </a>
@@ -146,7 +146,7 @@
           <img src="img/app/app-screen-2.png" alt="iPhone app approving plan screen" class="step-img">
         </div>
         <div class="step-text-box">
-          <p class="step-number">01</p>
+          <p class="step-number">02</p>
           <h3 class="heading-tertiary">Approve your weekly meal plan: </h3>
           <p class="step-description">
             Once per week, approve the meal plan generated for you by Omnifood AI. You can change ingredients, swap entire meals, or even add your own recipes.
@@ -155,7 +155,7 @@
 
         <!-- STEP 03 -->
         <div class="step-text-box">
-          <p class="step-number">01</p>
+          <p class="step-number">03</p>
           <h3 class="heading-tertiary">
             Receive meals at convenient time: 
           </h3>
