--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
     <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="/css/queries.css">
 
+    <script src="/script.js" defer></script>
+
     <title>Omnifood</title>
   </head>
   <body>
     <header class="header">
-      <a href="">
+      <a href="#">
         <img class="logo" alt="Omnifood logo" src="/img/omnifood-logo.png"></img>
       </a>
 
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a href="#"class="main-nav-link">How it works</a></li>
-          <li><a href="#"class="main-nav-link">Meals</a></li>
-          <li><a href="#"class="main-nav-link">Testimonials</a></li>
-          <li><a href="#"class="main-nav-link">Pricing</a></li>
-          <li><a href="#"class="main-nav-link nav-cta">Try for free</a></li>
+          <li><a href="#how"class="main-nav-link">How it works</a></li>
+          <li><a href="#meals"class="main-nav-link">Meals</a></li>
+          <li><a href="#testimonials"class="main-nav-link">Testimonials</a></li>
+          <li><a href="#pricing"class="main-nav-link">Pricing</a></li>
+          <li><a href="#cta"class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
       </nav>  
       
@@ -54,10 +56,10 @@
             healthy again. Tailored to your personal tastes and nutritional
             needs.
           </p>
-          <a href="#" class="btn btn--full margin-right-sm"
+          <a href="#cta" class="btn btn--full margin-right-sm"
             >Start eating well</a
           >
-          <a href="#" class="btn btn--outline">Learn more &darr;</a>
+          <a href="#how" class="btn btn--outline">Learn more &darr;</a>
           <div class="delivered-meals">
             <div class="delivered-imgs">
               <img
@@ -121,7 +123,7 @@
       </div>
     </section>
 
-    <section class="section-how">
+    <section class="section-how" id="how">
       <div class="container">
         <span class="subheading">How it works</span>
         <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
@@ -171,7 +173,7 @@
     </section>
 
 
-    <section class="section-meals">
+    <section class="section-meals" id="meals">
       <div class="container center-text">
         <span class="subheading">Meals</span>
         <h2 class="heading-secondary">Omnifood AI chooses from 5,000+ recipes</h2>
@@ -281,7 +283,7 @@
       </div>
     </section>
 
-    <section class="section-testimonials">
+    <section class="section-testimonials" id="testimonials">
       <div class="testimonials-container">
         <span class="subheading">Testimonials</span>
         <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -364,7 +366,7 @@
       </div>
     </section>
 
-    <section class="section-pricing">
+    <section class="section-pricing" id="pricing">
       <div class="container center-text">
         <span class="subheading">Pricing</span>
         <h2 class="heading-secondary">
@@ -488,7 +490,7 @@
       </div>
     </section>
 
-    <section class="section-cta">
+    <section class="section-cta" id="cta">
       <div class="container">
         <div class="cta">
         <div class="cta-text-box">
@@ -562,7 +564,7 @@
   <footer class="footer">
     <div class="container grid grid--footer">
       <div class="logo-col">
-        <a href="" class="footer-logo">
+        <a href="#" class="footer-logo">
           <img class="logo" alt="Omnifood logo" src="/img/omnifood-logo.png"></img>
         </a>
 
@@ -578,7 +580,7 @@
           </li>
         </ul>
 
-        <p class="copyright">Copyright &copy 2027 by Omnifood, Inc. All rights reserved.</p>
+        <p class="copyright">Copyright &copy <span class="year">2027</span> by Omnifood, Inc. All rights reserved.</p>
       </div>
 
 
