Update hero image format to webp

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
         <div class="hero-image-box">
           <img
-            src="img/hero.png"
+            src="img/hero.webp"
             alt="Woman enjoying food, meals in storage container, and food bowls on a table"
             class="hero-img"
           />
