--- a/index.html
+++ b/index.html
@@ -508,26 +508,26 @@
             Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
           </p>
 
-          <form action="#" class="cta-form">
+          <form name="sign-up" class="cta-form" netlify>
             <div>
             <label for="full-name">
               Full name
             </label>
-            <input id="full-name" type="text" placeholder="John Smith" required>
+            <input name="full-name" id="full-name" type="text" placeholder="John Smith" required>
           </div>
 
           <div>
             <label for="email">
               Email address
             </label>
-            <input id="email" type="email" placeholder="me@example.com" required>
+            <input name="email" id="email" type="email" placeholder="me@example.com" required>
           </div>
 
           <div>
             <label for="select-where">
               Where did you hear from us?
             </label>
-            <select name="" id="select-where" required>
+            <select name="select-where" id="select-where" required>
               <option value="">
                 Please choose one option:
               </option>
