--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
             Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
           </p>
 
-          <form name="sign-up" class="cta-form" netlify>
+          <form name="sign-up" class="cta-form" method="POST" data-netlify="true">
             <div>
             <label for="full-name">
               Full name
